# minimal_cmake_make_check

./: CMakeLists.txt  README.md
